<resources>
    <string name="app_name">Secondhand</string>

    <!-- Common -->
    <string name="loading">Loading</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="account_question1">Don\'t have an account yet?</string>
    <string name="account_question2">Already have an account?</string>
    <string name="have_account">Sign in here!</string>
    <string name="not_have_account">Sign up here!</string>
    <string name="city">City</string>
    <string name="edit_account">Edit Account</string>
    <string name="name_required">Name <font color='red'>*</font></string>
    <string name="phone_number_required">Phone Number <font color='red'>*</font></string>
    <string name="city_required">City <font color='red'>*</font></string>
    <string name="address_required">Address <font color='red'>*</font></string>
    <string name="account_setting">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="version">Version 1.2.3</string>

    <!-- Content Description -->
    <string name="desc_hide_password">Hide password</string>
    <string name="desc_show_password">Show password</string>
    <string name="description_back_button">Back Button</string>
    <string name="description_profile_image">Profile Image Button</string>
    <string name="description_account_setting_button">Account Settings, Coming soon</string>
    <string name="description_logout_button">Logout Button</string>
    <string name="no_description">No Description.</string>

    <!-- Placeholder -->
    <string name="placeholder_name">Your Name</string>
    <string name="placeholder_email">Your Email</string>
    <string name="placeholder_phone_number">Your Number</string>
    <string name="placeholder_address">Your Address</string>
    <string name="placeholder_password">Your Password</string>
    <string name="placeholder_city">Your City</string>

    <!-- Success Message -->
    <string name="register_success">Account Created Successfully</string>
    <string name="login_success">Login Success</string>
    <string name="update_profile_success">Account Updated Successfully</string>

    <!-- Error Message -->
    <string name="email_exist_error">Email already exists</string>
    <string name="fill_all_field_error">Please fill all necessary field</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="invalid_email_password">Email or Password Are Wrong</string>
    <string name="internal_service_error">Internal Service Error</string>

    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="sell">Sell</string>
    <string name="sell_list">Sell List</string>
    <string name="account">Account</string>
    <string name="description">Description</string>
    <string name="publish">Publish</string>
    <string name="bid">Bid</string>
    <string name="bid_price">Bid Price</string>
    <string name="header_edit_detail_product">Sell Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="placeholder_product_price">Rp 0,00</string>
    <string name="category">Category</string>
    <string name="placeholder_description">Example : Stray Cat Orange Barbarian No Root</string>
    <string name="product_image">Photo Product</string>
    <string name="preview">Preview</string>
    <string name="login_placeholder_commentary_text">Seems like you are not currently signed in!</string>
    <string name="header_detail_bidder">Bidder Info</string>
    <string name="header_product_bidded">Bid Received</string>
    <string name="product_offer">Product Offering</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="bottomsheet_title">Yeay you managed to get the right price</string>
    <string name="bottomsheet_bidder_description">Contact the buyer via whatsapp for further transactions</string>
    <string name="product_match">Product Match</string>
    <string name="bottomsheet_status_title">Perbarui status penjualan produkmu</string>
    <string name="product_sold">Product Sold</string>
    <string name="transaction_canceled">Transaction canceled</string>
    <string name="product_sold_description">This product has been sold</string>
    <string name="transaction_canceled_description">This transaction has been cancelled</string>
    <string name="submit">Submit</string>
    <string name="contact_whatsapp">Contact via Whatsapp</string>
    <string name="status">Status</string>
    <string name="contact">Contact</string>
    <string name="order_bottomsheet_title">Set Your Bid Price</string>
    <string name="order_bottomsheet_description">Your bid price will be proposed to the seller, if the seller matches your price, the seller will contact you through Whatsapp</string>
    <string name="order_success">Order Success!</string>
    <string name="make_another_order">Next order please!</string>
    <string name="error_bad_order">You can\'t bid your own product or maybe You already bid this product</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="placeholder_old_password">Input your old password</string>
    <string name="placeholder_new_password">Input your new password</string>
    <string name="change_password">Change password</string>
    <string name="change">Change</string>
    <string name="confirm_password">Confirm password</string>
    <string name="placeholder_confirm_password">Input new password confirmation</string>
    <string name="invalid_password">Please input your password correctly</string>
    <string name="change_password_success">Change Password Success</string>
    <string name="confirm_password_placeholder">Confirm your password</string>
    <string name="all_orders">All Orders</string>
    <string name="accepted_orders">Accepted Orders</string>
    <string name="declined_orders">Declined Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="product">Product</string>
    <string name="order">Order</string>
    <string name="my_order">My Order</string>
    <string name="buyer_order_detail_date_and_status">%1$s\n%2$s</string>
    <string name="error_buyer_order_detail_date_and_status">%1$s\n%2$s</string>
    <string name="buyer_order_detail_title">Order #%1$s</string>
    <string name="wishlist">Wishlist</string>
    <string name="search_second_hand">Search on SecondHand</string>
    <string name="find_category">Find Category</string>
    <string name="retry">Retry</string>

</resources>
